[package]
name = "bottlecache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tokio = { version = "1.18", features = ["full"] }
octocrab = "0.16"
tokio-cron-scheduler = "0.7"
anyhow = "1.0"
thiserror = "1.0"
zip = "0.6"
structopt = "0.3"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
