[package]
name = "bottlecache"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
tokio = { version = "1.18", features = ["full"] }
octocrab = "0.16"
tokio-cron-scheduler = "0.7"
anyhow = "1.0"
thiserror = "1.0"
zip = "0.6"
structopt = "0.3"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
itertools = "0.10"
common = { path = "../common" }
log = "0.4"
env_logger = "0.9"
