[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
plotters = "0.3"
plotters-canvas = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window"
  ]}
structopt = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
common = { path = "../common"}
