[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
plotters = "0.3"
plotters-canvas = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window"
  ]}
reqwasm = "0.5"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
console_error_panic_hook = "0.1"
wasm-rs-dbg = "0.1"
common = { path = "../common"}
